feat(swagger): upgrade swagger with scalar api
